# does-it-build

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix
migrations/: 20240907153345_create_build_info.sql  20240908082826_add_miri_std.sql  20240908102033_nightly_is_broken.sql
src/: build.rs  db.rs  main.rs  nightlies.rs  web.rs
static/: build.html  index.css  index.html  index.js
