[package]
name = "does-it-build"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
color-eyre = "0.6.3"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = [
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
